deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-01
spec:
  selector:
    matchLabels:
      app: kd
  template:
    metadata:
      labels:
        app: kd
    spec:
      containers:
      - name: golang-app
        image: abereziuk/task-01:1.2.3
        resources:
          limits:
            memory: 1024Mi
            cpu: "1.5"
          requests:
            memory: 512Mi
            cpu: "1"
        ports:
        - containerPort: 8080
