ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "a.int.itoutposts.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kd-service
            port:
              number: 80
